--- a/tutorial/src/bagging.Rmd
+++ b/tutorial/src/bagging.Rmd
@@ -70,7 +70,8 @@ bag.lrn = setPredictType(bag.lrn, predict.type = "se")
 mod = train(learner = bag.lrn, task = bh.task, subset = train.inds)
 ```
 
-With the function [&getHomogeneousEnsembleModels], you can access the models fitted in the individual iterations.
+With the function [&getHomogeneousEnsembleModels], you can access the models fitted in the
+individual iterations.
 ```{r}
 head(getHomogeneousEnsembleModels(mod), 2)
 ```
