--- a/tutorial/src/roc_analysis.Rmd
+++ b/tutorial/src/roc_analysis.Rmd
@@ -11,17 +11,17 @@ classifications costs (that would allow to calculate an optimal threshold value)
 
 The AUC (area under curve) summarizes the performance of the learner over all possible threshold
 values.
-[%mlr] provides the [&auc] performance measure for binary classification and also a
+[%mlr] provides the [auc](measures.md) performance measure for binary classification and also a
 generalization of the AUC for the multi-class case ([multiclass.auc](&pROC::muticlass.auc))
-from package [pROC](http://cran.r-project.org/web/packages/pROC/index.html).
+from package [%pROC].
 
 
 ## Plotting the ROC curve
 
 The [%mlr] function [&asROCRPrediction] converts predictions (resulting from
-calling [predict](&predict.WrapperModel), [&resample], or [&benchmark]) to a format that
-[ROCR](http://cran.r-project.org/web/packages/ROCR/index.html) can handle.
-Then functions in [ROCR](http://cran.r-project.org/web/packages/ROCR/index.html) are used
+calling [predict](&predict.WrappedModel), [&resample], or [&benchmark]) to a format that
+[%ROCR] can handle.
+Then functions in [%ROCR] are used
 to plot the ROC curve.
 
 In the following example we show how to compare the performance of two learners.
@@ -32,7 +32,7 @@ Note that the [learners](learner.md) have to be capable of predicting probabilit
 Have a look at the [table of learners](integrated_learners.md)
 or run `listLearners(prob = TRUE)` to get a list of all learners that support this.
 We use the [Sonar](&mlbench::Sonar) data set from package
-[mlbench](http://cran.r-project.org/web/packages/mlbench/index.html).
+[%mlbench].
 
 ```{r}
 ## Linear discriminant analysis and support vector machine with RBF kernel
@@ -55,7 +55,7 @@ r2 = resample(lrn2, sonar.task, rdesc, measures = ms, show.info = FALSE)
 
 Now we have to convert each prediction within the resample result to a
 [ROCR prediction](&ROCR::prediction-class) using the [&asROCRPrediction] function.
-Afterwards we let [ROCR](http://cran.r-project.org/web/packages/ROCR/index.html)
+Afterwards we let [%ROCR]
 calculate the true and false positive rate using the function [performance](&ROCR::performance)
 and [plot](&ROCR::plot.performance) the ROC curve.
 As we have one curve for each learner and each cross validation fold we might want to
@@ -88,6 +88,8 @@ perf2 = ROCR::performance(pred2, "tpr", "fpr")
 plot(perf1, col = "blue")
 plot(perf2, col = "red", add = TRUE)
 ```
+
+## Viper charts
 
 [%mlr] also supports [ViperCharts](http://viper.ijs.si/) for plotting ROC
 curves. In this case, we can use the predictions directly.
