--- a/tutorial/src/example_tasks.Rmd
+++ b/tutorial/src/example_tasks.Rmd
@@ -1,4 +1,4 @@
-## Example Tasks
+# Example Tasks
 
 For your convenience [%mlr] provides pre-defined [&Task]s for each type of learning problem.
 These are used throughout this tutorial in order to get shorter and more readable code.
