--- a/NEWS
+++ b/NEWS
@@ -58,6 +58,7 @@ mlr_2.3:
 -- regr.cubist
 -- regr.elmNN
 -- regr.extraTrees
+-- regr.laGP
 -- regr.nodeHarvest
 -- regr.randomUniformForest
 -- regr.xgboost
