--- a/NEWS
+++ b/NEWS
@@ -19,8 +19,7 @@ mlr_2.3:
 - required basic learner packages are not loaded into the global namespace anymore, requireNamespace
   is used internally instead. this ensures less name clashes and name shadowing
 - resample passes dot arguments to the learner hyperpars
-- new option "on.par.out.of.bounds" to disable out-of-bound checks for model
-  parameters
+- new option "on.par.out.of.bounds" to disable out-of-bound checks for model parameters
 - measures were slightly internally changed. they expose more properties (check ?Measure) and some
   now unnecessary object slots were removed
 - classif.lda and classif.qda now have hyperpar "predict.method"
@@ -35,7 +34,6 @@ mlr_2.3:
 -- plotViperCharts
 -- measureSSE, measureMSE, measureRMSE, measureMEDSE, ...
 -- PreprocWrapperCaret
--- generateLearningCurve, plotLearningCurve
 -- setPredictThreshold
 
 - new learners:
