--- a/tutorial/src/learning_curve.Rmd
+++ b/tutorial/src/learning_curve.Rmd
@@ -4,13 +4,15 @@ To analyze how the increase of observations in the trainings set improves the pe
 The experiment is conducted with an increasing subsample size and the performance is measured.
 In the plot the x-axis represents the relative subsample size whereas the y-axis represents the performance.
 
-Note that this function internally uses [%makeDownsampleWrapper], so for every run new observations are drawn.
+Note that this function internally uses [%benchmark] in combination with [%makeDownsampleWrapper], so for every run new observations are drawn.
 Thus the results are noisy.
 To reduce noise increase number of resampling iterations.
+The resampling method you can define in the `resampling` argument of [%generateLearningCurve].
+It is also possible to pass a `ResampleInstance` (which is a result of [%makeResampleInstance]) to make resampling coherent for all passed learners and each step of increasing the observations.
 
 ## Plotting the Learning curve
 
-The [%mlr] function [generateLearningCurve](&generateLearningCurve) can generate the data for *learning curves* for multiple [learners](integrated_learners.md) and multiple [perfomrance measures](measures.md) at once. 
+The [%mlr] function [generateLearningCurve](&generateLearningCurve) can generate the data for *learning curves* for multiple [learners](integrated_learners.md) and multiple [performance measures](measures.md) at once. 
 With [&plotLearningCurve] the result of [&generateLearningCurve] can be plotted using [%ggplot2].
 
 ```{r LearningCurveTPFP}
@@ -24,7 +26,14 @@ r = generateLearningCurve(
 plotLearningCurve(r)
 ```
 
-Here you can see, that a simplified usage of the `learners` argument was used, so that it's sufficient to give the *Name*.
+What happens is the following:
+Each learner will be internally wrapped in a `downsampleWrapper`.
+To measure the performance at the first step of `percs` - say `0.1` first the data will be split into a *training* and a *test set* according to the given *resampling*.
+Then a random sample containing 0.1% of the observations of the *training set* will be drawn and used to train the learner.
+The performance will be measured on the *complete test set*.
+These steps will be repeated as defined by the given *resampling* and for each value of `percs`.
+
+In the first example a simplified usage of the `learners` argument was used, so that it's sufficient to give the *Name*.
 It is also possible to create a learner the usual way and even to mix it.
 Make sure to give different 'ids' in this case.
 
