--- a/tutorial/src/learner.Rmd
+++ b/tutorial/src/learner.Rmd
@@ -69,7 +69,7 @@ The [Learner](&makeLearner) object is a [list](&base::list) and the following el
 information regarding the hyperparameters and the type of prediction.
 
 ```{r}
-## Get the selected hyperparameter values:
+## Get the configured hyperparameter settings that deviate from the defaults:
 cluster.lrn$par.vals
 
 ## Get the set of hyperparameters:
